--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,14 @@ services:
   - type: web
     name: telegram-bot-api
     env: docker
-    region: virginia
-    plan: pro
+    region: oregon
+    plan: standard
     healthCheckPath: /
-    healthCheckPort: 10000
+    healthCheckPort: 80
     disk:
       name: telegram-bot-api-data
       mountPath: /app/data
-      sizeGB: 2
+      sizeGB: 1
     envVars:
       - key: API_ID
         sync: false
