--- a/nginx.conf
+++ b/nginx.conf
@@ -24,14 +24,13 @@ http {
     gzip on;
 
     server {
-        listen 80;
+        listen 8080;
         server_name localhost;
 
         # Health check endpoint
         location = / {
-            proxy_pass http://127.0.0.1:10000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            return 200 '{"status":"ok","message":"Telegram Bot API Server Health Check"}';
+            add_header Content-Type application/json;
         }
 
         # Route all other requests to the Telegram Bot API server
