--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,10 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
+server {
+    listen 80;
+    server_name localhost;
 
-events {
-    worker_connections 1024;
-}
-
-http {
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # Logging settings
-    access_log /app/data/nginx_access.log;
-    error_log /app/data/nginx_error.log;
-
-    # Gzip settings
-    gzip on;
-
-    server {
-        listen 8080;
-        server_name localhost;
-
-        # Health check endpoint
-        location = / {
-            return 200 '{"status":"ok","message":"Telegram Bot API Server Health Check"}';
-            add_header Content-Type application/json;
-        }
-
-        # Route all other requests to the Telegram Bot API server
-        location / {
-            proxy_pass http://127.0.0.1:8081;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+    location / {
+        proxy_pass http://localhost:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
