--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,14 @@ server {
     listen 80;
     server_name localhost;
 
+    access_log /app/data/nginx_access.log;
+    error_log /app/data/nginx_error.log;
+
     location / {
         proxy_pass http://localhost:8081;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
